# Basement

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compile_test.sh  makefile  misc.txt  nvcompatlog.txt  why
assets/shaders/: basic_v.glsl  cubemap_f.glsl  cubemap_v.glsl  mean_shader_test_c.glsl  noise_test_f.glsl  perlin_worely_c.glsl  plane_f.glsl  plane_v.glsl  shadow_f.glsl  shadow_v.glsl  ssbo_2_texRGBA_c.glsl  ssbo_2_texRGB_c.glsl  texRGB_2_ssbo_c.glsl  volemtric_clouds_c.glsl  volumetric_clouds_c.glsl  weather_c.glsl  worely_c.glsl
include/: makefile  testphysx.cpp
include/mesh/: Mesh.h
include/phys/: Physics.h
include/rendering/: GLMetalInteropTex.h  Pipeline.h  RenderTarget.h  Shader.h  Texture.h
include/utils/: Controls.hpp
libs/guinodes/Examples/RenderGraph/: RenderGraph.cpp  RenderGraphNodeDefs.h
objects/clouds/: CMakeLists.txt  Clouds.cpp  Clouds.h  CloudsModel.cpp  CloudsModel.h  VolumetricClouds.h
objects/particles/: Particles.cpp
src/: CMakeLists.txt  CSG.cpp  CSG.h  GameContext.cpp  GameContext.h  GameContext.mm  Main.cpp  Mesh.cpp  Mesh.h  Obj.cpp  Obj.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  TestCuda.cu  Tests.cpp  Tri.cpp  Tri.h  driver.py  editorglTest.cpp  glTest.cpp  pyTest.cpp
src/collision/: Parameters.cpp
src/editor/: boost_graph_test.cpp
src/gui/: testGUI.cpp
src/mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h  Terrain.cpp  Terrain.h
src/obselete/: Ray.h  TestCuda.cu
src/phys/: CMakeLists.txt  Physics.cpp  Physics.h  Plane.cpp  Plane.h  Sphere.cpp  Tri.cpp  Tri.h  makefile  pxTest.cpp  pxtest
src/phys/obselete/: Cube.h  Transform.cpp
src/primitives/: Cube.cpp  Obj.cpp  Obj.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Tri.cpp  Tri.h
src/rendering/: Buffer.cpp  Buffer.h  CMakeLists.txt  GLMetalInteropTex.mm  Material.cpp  Material.h  Pipeline.cpp  RenderTarget.cpp  RenderTarget.h  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture.mm
src/rendering/shaders/: BasicFrag.hlsl  BasicVert.hlsl  NoiseTestFrag.glsl  NoiseTestVert.glsl  basic_v.glsl  cubemap_f.glsl  cubemap_v.glsl  noise_test_f.glsl  noise_test_v.glsl  plane_f.glsl  plane_v.glsl  shadow_f.glsl  shadow_v.glsl
src/scripts/: gameobj.py  main_loop.py
src/tf_driver/: CMakeLists.txt  StyleTransfer.cpp  StyleTransfer.h  cpp_tf_test.cpp  magenta_model_test.py  magenta_test.py  tf_metal_delegate_test.cpp  tf_test.py
src/tf_driver/utils/: tfl_summary.py
src/utils/: CMakeLists.txt  Controls.cpp  ShaderUtils.cpp  ShaderUtils.h  controls.cpp
tests/: CMakeLists.txt  README.md  makefile  test_BACKFORTH.cpp  test_MEANSHADER.cpp  test_MetalGLFW.mm  test_NUMPY.cpp  test_OPENCV.cpp  tests.py
